--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -167,37 +167,26 @@
     --ring: 169 100% 48%;
   }
 
-  .gradient1 {
-    --gradient: linear-gradient(to top left,#5433FF,#20BDFF,#A5FECB);
-
-    --background: 265 65% 4.8%;
-    --foreground: 0 0% 95%;
-    --muted: 265 50% 18%;
-    --muted-foreground: 265 10% 56%;
-
-    --popover: 265 45% 7.8%;
-    --popover-foreground: 265 10% 98%;
-
-    --card: 265 45% 7.8%;
-    --card-foreground: 265 10% 98%;
-
-    --border: 265 50% 18%;
-    --input: 265 50% 18%;
-
-    --primary: 265 100% 60%;
-    --primary-foreground: 265 10% 6%;
-
-    --secondary: 265 50% 18%;
-    --secondary-foreground: 265 10% 98%;
-
-    --accent: 265 50% 18%;
-    --accent-foreground: 265 10% 98%;
-
+  .violet {
+    --background: 224 71.4% 4.1%;
+    --foreground: 210 20% 98%;
+    --card: 224 71.4% 4.1%;
+    --card-foreground: 210 20% 98%;
+    --popover: 224 71.4% 4.1%;
+    --popover-foreground: 210 20% 98%;
+    --primary: 263.4 70% 50.4%;
+    --primary-foreground: 210 20% 98%;
+    --secondary: 215 27.9% 16.9%;
+    --secondary-foreground: 210 20% 98%;
+    --muted: 215 27.9% 16.9%;
+    --muted-foreground: 217.9 10.6% 64.9%;
+    --accent: 215 27.9% 16.9%;
+    --accent-foreground: 210 20% 98%;
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 265 10% 98%;
-
-    --ring: 265 100% 60%;
+    --destructive-foreground: 210 20% 98%;
+    --border: 215 27.9% 16.9%;
+    --input: 215 27.9% 16.9%;
+    --ring: 263.4 70% 50.4%;
   }
-
   
 }
